--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
-    
+    <!--  Sidebar start -->
+    <div class="sidebar">
+        <i class="fab fa-twitter"></i>
+        <div class="sidebar-icon active">
+            <span class="material-symbols-outlined">
+                home
+            </span>
+        </div>
+        <div class="sidebar-icon">
+            <span class="material-symbols-outlined">
+                search
+            </span>
+        </div>
+        <!-- 4 -->
+        <div class="sidebar-icon">
+            <span class="material-symbols-rounded">
+                notifications
+            </span>
+        </div>
+        <div class="sidebar-icon">
+            <span class="material-symbols-rounded">
+                mail
+            </span>
+        </div>
+        <div class="sidebar-icon">
+            <span class="material-symbols-rounded">
+                person_2
+            </span>
+        </div>
+        <div class="sidebar-icon">
+            <span class="material-symbols-rounded">
+                bookmark
+            </span>
+        </div>
+    </div>
+    <!-- Sidebar end -->
 </body>
 </html>
