Fix: icons of the clone

--- a/index.html
+++ b/index.html
@@ -20,30 +20,36 @@
         </div>
         <div class="sidebar-icon">
             <span class="material-symbols-outlined">
+                tag
+                </span>
+        </div>
+        <div class="sidebar-icon">
+            <span class="material-symbols-outlined">
                 search
             </span>
         </div>
         <!-- 4 -->
         <div class="sidebar-icon">
-            <span class="material-symbols-rounded">
+            <span class="material-symbols-outlined">
                 notifications
             </span>
         </div>
         <div class="sidebar-icon">
-            <span class="material-symbols-rounded">
+            <span class="material-symbols-outlined">
                 mail
-            </span>
+                </span>
         </div>
         <div class="sidebar-icon">
-            <span class="material-symbols-rounded">
+            <span class="material-symbols-outlined">
                 person_2
-            </span>
+                </span>
         </div>
         <div class="sidebar-icon">
-            <span class="material-symbols-rounded">
+            <span class="material-symbols-outlined">
                 bookmark
-            </span>
+                </span>
         </div>
+        <button id="sidebar-btn" value="twitter">Twitter</button>
     </div>
     <!-- Sidebar end -->
 </body>
