Add: One more icon

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 bookmark
                 </span>
         </div>
+        <div class="sidebar-icon">
+            <span class="material-symbols-outlined">
+                more_horiz
+                </span>
+        </div>
         <button id="sidebar-btn" value="twitter">Twitter</button>
     </div>
     <!-- Sidebar end -->
