--- a/index.html
+++ b/index.html
@@ -57,5 +57,20 @@
         <button id="sidebar-btn" value="twitter">Twitter</button>
     </div>
     <!-- Sidebar end -->
+
+    <!-- Feed start -->
+    <div class="feed">
+    <header class="feed_header">
+     <h2>Home</h2>
+
+     <!-- star icon -->
+     <div class="right-side-icon">
+        <span class="material-symbols-outlined">
+            auto_awesome
+            </span>
+     </div>
+    </header>
+    </div>
+    <!-- Feed end -->
 </body>
 </html>
