Update: tweet box area

--- a/index.html
+++ b/index.html
@@ -67,9 +67,30 @@
      <div class="right-side-icon">
         <span class="material-symbols-outlined">
             auto_awesome
-            </span>
+        </span>
      </div>
     </header>
+    <div class="tweetbox">
+        <form>
+            <div class="tweetbox_input">
+                <img 
+                src="#" 
+                alt="Avtara" />
+                <input type="text" placeholder="What's happening? " />
+            </div>
+            <div class="bottom-side-tweetbox">
+                <div class="tweet-icons">
+                    <img src="#" alt="Media">
+                    <img src="#" alt="GIF">
+                    <img src="#" alt="Poll">
+                    <img src="#" alt="Emoji">
+                    <img src="" alt="Schedule">
+                    <img src="" alt="Tag Location">
+                </div>
+            <button class="tweetButton">Tweet</button>
+            </div>
+        </form>
+    </div>
     </div>
     <!-- Feed end -->
 </body>
