Added: Avtara image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <form>
             <div class="tweetbox_input">
                 <img 
-                src="#" 
+                src="/images/unsplash.jpg" 
                 alt="Avtara" />
                 <input type="text" placeholder="What's happening? " />
             </div>
@@ -84,8 +84,8 @@
                     <img src="#" alt="GIF">
                     <img src="#" alt="Poll">
                     <img src="#" alt="Emoji">
-                    <img src="" alt="Schedule">
-                    <img src="" alt="Tag Location">
+                    <img src="#" alt="Schedule">
+                    <img src="#" alt="Tag Location">
                 </div>
             <button class="tweetButton">Tweet</button>
             </div>
