Update: Feed section
Also import CSS link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link rel="stylesheet" href="tweetbox.css">
 </head>
 <body>
     <!--  Sidebar start -->
@@ -60,8 +61,8 @@
 
     <!-- Feed start -->
     <div class="feed">
-    <header class="feed_header">
-     <h2>Home</h2>
+     <header class="feed_header">
+      <h2>Home</h2>
 
      <!-- star icon -->
      <div class="right-side-icon">
@@ -80,12 +81,12 @@
             </div>
             <div class="bottom-side-tweetbox">
                 <div class="tweet-icons">
-                    <img src="#" alt="Media">
+                    <!-- <img src="#" alt="Media">
                     <img src="#" alt="GIF">
                     <img src="#" alt="Poll">
                     <img src="#" alt="Emoji">
                     <img src="#" alt="Schedule">
-                    <img src="#" alt="Tag Location">
+                    <img src="#" alt="Tag Location"> -->
                 </div>
             <button class="tweetButton">Tweet</button>
             </div>
