--- a/index.html
+++ b/index.html
@@ -62,14 +62,12 @@
     <!-- Feed start -->
     <div class="feed">
      <header class="feed_header">
-      <h2>Home</h2>
-
-     <!-- star icon -->
-     <div class="right-side-icon">
+      <h2>Home <div class="right-side-icon">
         <span class="material-symbols-outlined">
             auto_awesome
         </span>
-     </div>
+     </div></h2>
+     
     </header>
     <div class="tweetbox">
         <form>
