--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           </div>
         </h2>
       </header>
+      <!-- tweet box starts -->
       <div class="tweetbox">
         <form>
           <div class="tweetbox_input">
