Updated: Explore section
Added Explore Section in Twitter Clone

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" type="text/css" />
-    <link rel="stylesheet" href="tweetbox.css" />
   </head>
   <body>
     <!--  Sidebar start -->
@@ -181,5 +180,39 @@
       <!-- post section end two -->
     </div>
     <!-- Feed end -->
+
+    <!-- Explore section Start -->
+    <div class="explore-section">
+      <div class="search-box">
+        <span class="material-symbols-outlined Search-Icon"> search </span>
+        <input type="search" placeholder="Search Twitter" />
+      </div>
+      <div class="explore-container">
+        <h2>What's happening</h2>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            I just earned the Responsive Web Design certification
+            <a href="https://twitter.com/freeCodeCamp?ref_src=twsrc%5Etfw"
+              >@freeCodeCamp</a
+            >! Check it out here:
+            <a href="https://t.co/XS0iSbqKKR">https://t.co/XS0iSbqKKR</a>
+            <a href="https://t.co/8wVplg4CAO">pic.twitter.com/8wVplg4CAO</a>
+          </p>
+          &mdash; Bharat Chotwani (@ChotwaniBharat)
+          <a
+            href="https://twitter.com/ChotwaniBharat/status/1600759640475676673?ref_src=twsrc%5Etfw"
+            >December 8, 2022</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+      </div>
+    </div>
+
+    <div style="height: 100px"></div>
+    <!-- Explore section End -->
   </body>
 </html>
